auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "557ced6c",
+   "id": "4824d59d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bdb0e89",
+   "id": "b461206a",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23204f38",
+   "id": "98bd0278",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc62e817",
+   "id": "5d2abbaf",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9f01ff",
+   "id": "1e81d198",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea03d110",
+   "id": "2ee1d050",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "897e822e",
+   "id": "37a4736f",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2381242",
+   "id": "4db2aa0c",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5fdc9df",
+   "id": "45895802",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbfdd640",
+   "id": "afcc2114",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd50647",
+   "id": "0ed3a47a",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5db145",
+   "id": "55f59097",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "318ca28d",
+   "id": "2d227a4a",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402153a5",
+   "id": "3bee9b0c",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c03a24",
+   "id": "2f3cbf0b",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb277605",
+   "id": "a9c49b15",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd55b1c",
+   "id": "f21896d3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc869f5",
+   "id": "6ff70855",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af354a9b",
+   "id": "21278638",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92dc947",
+   "id": "8d6c5d75",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52674ca9",
+   "id": "bf0eff40",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f306b4",
+   "id": "fa5b1208",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9208f17b",
+   "id": "2c8b2a57",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4dfaf45",
+   "id": "ca8484c2",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3728442",
+   "id": "3397ebc9",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d004cd",
+   "id": "70af93ac",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "436c7773",
+   "id": "8e99066a",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31bf806d",
+   "id": "bb6d5eb8",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2c907c",
+   "id": "5b92b276",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f66e1a",
+   "id": "6f909d6d",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c07e8e7",
+   "id": "e9b67da8",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af181bed",
+   "id": "b707be03",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53500ca",
+   "id": "6060e510",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1bd123",
+   "id": "b27f9041",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3aa276",
+   "id": "fc68f67e",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce75fed",
+   "id": "2e1f546e",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9448b6a1",
+   "id": "9af168f5",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff439259",
+   "id": "ca0c5684",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a361e7f5",
+   "id": "04f73f8b",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e60020dc",
+   "id": "41130d17",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818cb3bc",
+   "id": "067032cb",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602d46ce",
+   "id": "1ab9f8d2",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975170a9",
+   "id": "9140c41a",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3afdf661",
+   "id": "58c80121",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a8799f",
+   "id": "e7cdd1cd",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e48109",
+   "id": "84dd04ee",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a44ef5b",
+   "id": "13378703",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def56f31",
+   "id": "7ab41cbf",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be13e714",
+   "id": "f9c75e4c",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d864fc",
+   "id": "4cb54970",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf89264",
+   "id": "c52d017e",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ef1354",
+   "id": "a3d300c2",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c460cf",
+   "id": "eda2c8b4",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c076314b",
+   "id": "acc7f8cb",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81ec2e33",
+   "id": "9ccf2a0d",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa578de",
+   "id": "6b56f73d",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f759609d",
+   "id": "e5f222d5",
    "metadata": {
     "hide-output": false
    },
@@ -1278,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.3002353,
+  "date": 1764567831.952082,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
