--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11b07d13",
+   "id": "60acee58",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc97929",
+   "id": "931d4b45",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4885b106",
+   "id": "89735d09",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "422d8bf3",
+   "id": "765d458e",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4456cdf9",
+   "id": "a6388f69",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca3317b",
+   "id": "accb79df",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab6688ce",
+   "id": "afdc333e",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a50c118",
+   "id": "3261ac6e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965e90b4",
+   "id": "83eacdf5",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8f81c7",
+   "id": "69aeb934",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22ecec9a",
+   "id": "2aa5682f",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdc696a",
+   "id": "6cad00ab",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e12a1a20",
+   "id": "ee727364",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3605ba",
+   "id": "96c0bbd5",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b60113a",
+   "id": "4d9026c4",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039fe68f",
+   "id": "c4154635",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1513ff4f",
+   "id": "92297439",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6544679a",
+   "id": "6f6112ce",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe8ab52",
+   "id": "02bf472c",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da8de71",
+   "id": "575033cc",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3add042a",
+   "id": "4a70dd5c",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf14adb",
+   "id": "ecf993a6",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c8320c",
+   "id": "71825b6b",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1395b69",
+   "id": "98a3323b",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3578af",
+   "id": "b260f5bf",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7737663b",
+   "id": "955520c4",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bb4f6fb",
+   "id": "ec2a3481",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ffd650",
+   "id": "f91829cc",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92247396",
+   "id": "3367ea09",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8847063",
+   "id": "ea6c3d7c",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36473d7",
+   "id": "b2718306",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8747b8b0",
+   "id": "ebdfe35a",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0456fc7",
+   "id": "706f704a",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4cc689",
+   "id": "d4226ab2",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d151018",
+   "id": "1ee75fa8",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6e99f7",
+   "id": "34f456fc",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4277fe8f",
+   "id": "35214d53",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.4958243,
+  "date": 1764567832.138245,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
