--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1fcf456",
+   "id": "b022ab0b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd45377",
+   "id": "26b50e27",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e840100d",
+   "id": "fcdc0e9f",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faebd83e",
+   "id": "fdf68593",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8d34a4",
+   "id": "5884b533",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebe8c61",
+   "id": "4eb242e7",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b4d7056",
+   "id": "008ad228",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be1d989",
+   "id": "75862ed8",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31475a34",
+   "id": "1f721f5f",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd748a1",
+   "id": "05e9d084",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8f0e8e",
+   "id": "45d0781a",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274dce3c",
+   "id": "b6d242b9",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5bbeab",
+   "id": "a518ff0a",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4459cd82",
+   "id": "f227c47c",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00fcc761",
+   "id": "6d53ce2f",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffb1481",
+   "id": "5911a1b3",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a45def2b",
+   "id": "46ad5665",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12349937",
+   "id": "24db90ef",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65eb7c34",
+   "id": "3933adfd",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcfb188",
+   "id": "c62ef831",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d4474d",
+   "id": "eaa2a56c",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64223582",
+   "id": "f54a84b6",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d38ec69c",
+   "id": "1c0543c3",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a3efdd",
+   "id": "b1509054",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1db98db",
+   "id": "0915d77d",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057c5846",
+   "id": "2c224729",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35d2401",
+   "id": "9dc76631",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91eed998",
+   "id": "0f4383f4",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b4f8c9",
+   "id": "d21cdf95",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "377215da",
+   "id": "4ae65db5",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b189b57f",
+   "id": "25941c16",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f722fc10",
+   "id": "a1a71f1b",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04a4901",
+   "id": "8a283d5d",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7567172f",
+   "id": "fbee988c",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bdb1e99",
+   "id": "c2d22cdf",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdf3bac9",
+   "id": "9d90a0e3",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69587234",
+   "id": "73cbfcad",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdba0238",
+   "id": "502dc5f0",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe97b68",
+   "id": "4cf85d75",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135c27ce",
+   "id": "2a35304c",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0475144",
+   "id": "80120ad7",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23970b72",
+   "id": "8e88923f",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b07c104",
+   "id": "f3a528f0",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0db3c2",
+   "id": "e0615d55",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853dd5c9",
+   "id": "8fbb6045",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77960827",
+   "id": "2af3d7a9",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6469ff",
+   "id": "ca7cc790",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "569c33f6",
+   "id": "8aedf8a6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b43ad4",
+   "id": "7f9acd6d",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.718122,
+  "date": 1764567832.3503551,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
