--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9644c493",
+   "id": "dfca4864",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26963e13",
+   "id": "c502b3c6",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e275b3",
+   "id": "4d6e4c18",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253aa23d",
+   "id": "49d66ece",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dde6abc",
+   "id": "35e74804",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26626efd",
+   "id": "92c69715",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763d6406",
+   "id": "77775973",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956730d2",
+   "id": "7d79b7fb",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a8dc54",
+   "id": "34d56935",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae47476f",
+   "id": "22b9cca5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af1a302",
+   "id": "d0fe08a7",
    "metadata": {
     "hide-output": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "634b151c",
+   "id": "586ea719",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953c16c9",
+   "id": "19361b6a",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bdb7739",
+   "id": "8d51ab78",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada8f207",
+   "id": "7cd264ec",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cde3e2d",
+   "id": "54e314f4",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d1893e",
+   "id": "5f8532de",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94282045",
+   "id": "04a608e8",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd9fdd2",
+   "id": "a89f58cf",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe9a7fc4",
+   "id": "cc5833a7",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a625b90b",
+   "id": "bbba62bb",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb5e6df",
+   "id": "182dc236",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "360734a9",
+   "id": "f38b1c39",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e00ba8d",
+   "id": "4a3e755f",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "422e934d",
+   "id": "b38e50cc",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13103e47",
+   "id": "cab71656",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c339b39",
+   "id": "b0f2e23b",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb44172",
+   "id": "72fbe6cc",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4459c209",
+   "id": "e104c574",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d532c294",
+   "id": "55de170e",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "735c4591",
+   "id": "8b2fa20b",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957da39b",
+   "id": "770de547",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d44313",
+   "id": "36b7912c",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01230f28",
+   "id": "c6f50c50",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c12fbaa",
+   "id": "be3ccd89",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec563974",
+   "id": "017e2d3e",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69322f61",
+   "id": "6f926a02",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f84db880",
+   "id": "cc915ac4",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f6f836",
+   "id": "db7f4442",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76443e54",
+   "id": "ed35c30e",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b876da",
+   "id": "7dc00b34",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac20ff99",
+   "id": "53ac8221",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be6bac4",
+   "id": "5073c7f5",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd04608a",
+   "id": "e3b50ca6",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97aed8be",
+   "id": "b73e91af",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa2437f",
+   "id": "e3411e17",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fef0017",
+   "id": "24387ea4",
    "metadata": {
     "hide-output": false
    },
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf84beb9",
+   "id": "d96f13d1",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57f7e7a6",
+   "id": "9c4dd786",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead74417",
+   "id": "5f5e3320",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89c8b339",
+   "id": "a15a45c6",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6e1909",
+   "id": "e24ba449",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d546d497",
+   "id": "7a068456",
    "metadata": {
     "hide-output": false
    },
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0070a557",
+   "id": "3daee428",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "772566c2",
+   "id": "d5993d4e",
    "metadata": {
     "hide-output": false
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26fce85",
+   "id": "8fa6bc67",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5987f5ad",
+   "id": "aaef9f0f",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b68a9ee",
+   "id": "1a41af92",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb42a2db",
+   "id": "ea56df2f",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a19409",
+   "id": "83371bbc",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07ea8278",
+   "id": "d58925be",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934d0581",
+   "id": "bc953990",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917d45d4",
+   "id": "e2407699",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a9d43a",
+   "id": "2a078ed3",
    "metadata": {
     "hide-output": false
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb73835",
+   "id": "8d97d435",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7e32b3c",
+   "id": "be56b82a",
    "metadata": {
     "hide-output": false
    },
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93a19eb",
+   "id": "b7f15846",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea5d747",
+   "id": "cb628b4b",
    "metadata": {
     "hide-output": false
    },
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a7a6bec",
+   "id": "5a117417",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83e5e97",
+   "id": "9b0f9df6",
    "metadata": {
     "hide-output": false
    },
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12bb2152",
+   "id": "7882c51e",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853d2e78",
+   "id": "c9809b35",
    "metadata": {
     "hide-output": false
    },
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf85e38",
+   "id": "77d2c152",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ccc7b1",
+   "id": "8ee19983",
    "metadata": {
     "hide-output": false
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c5f7c3",
+   "id": "d1f348c1",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c3da3c5",
+   "id": "0b4a7ea7",
    "metadata": {
     "hide-output": false
    },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa67911",
+   "id": "62a1bd46",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc163ccb",
+   "id": "4cb8101e",
    "metadata": {
     "hide-output": false
    },
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02f533e1",
+   "id": "02c012c2",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95958ad",
+   "id": "59d4699b",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3c40f3",
+   "id": "6b78a3e3",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46b1b927",
+   "id": "bb50487e",
    "metadata": {
     "hide-output": false
    },
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb93157",
+   "id": "45765392",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1664,7 +1664,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.7697723,
+  "date": 1764567832.400068,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
