--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea1f5cb0",
+   "id": "449a4595",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc71b6d",
+   "id": "521b372f",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29de1f8d",
+   "id": "e70dea7f",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556258.0590818,
+  "date": 1764567832.680184,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
