--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06fa94ff",
+   "id": "f9af875d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6368a2",
+   "id": "1d62d474",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90d2bc2",
+   "id": "82696672",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "962b6a3b",
+   "id": "ba38fc5e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd09edaf",
+   "id": "709a8cf0",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccfcabb",
+   "id": "a31f64f9",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b164932",
+   "id": "12a33db7",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f2aea0",
+   "id": "5efa1637",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ecf3358",
+   "id": "9c34dba5",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af94186a",
+   "id": "f8be5176",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf432634",
+   "id": "e880a75d",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67f5e78",
+   "id": "0819a8f4",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea06e35",
+   "id": "64ae6ebb",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae7f256",
+   "id": "27163bfc",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18631fa6",
+   "id": "6d72d6fb",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1527999d",
+   "id": "02355656",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b60ca5",
+   "id": "d3af0138",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba010e1a",
+   "id": "687cc297",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "549a8d64",
+   "id": "12742761",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1a199e",
+   "id": "752ac149",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "192ad454",
+   "id": "8eddac50",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725fb712",
+   "id": "b41a6c63",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b88ce0bd",
+   "id": "30c96ea1",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9236404",
+   "id": "44390ad8",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3471a71a",
+   "id": "eb4d8681",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5441d111",
+   "id": "0b2ba32b",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "badd1a71",
+   "id": "6574b76a",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ce456e",
+   "id": "8ae7fbe4",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a472f2",
+   "id": "2725a193",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99630caf",
+   "id": "f59d862c",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a941906",
+   "id": "7bc7dd85",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e5d17b",
+   "id": "e417647b",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f993fb5",
+   "id": "924cd5e4",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1781af",
+   "id": "a5fc3b68",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0094f5eb",
+   "id": "3db31572",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fae661",
+   "id": "8a4a3fae",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a995245",
+   "id": "ece43aa1",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6a73da",
+   "id": "d71d22c6",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68f4771",
+   "id": "20cb732d",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af39d55",
+   "id": "e6730773",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30f70a0",
+   "id": "2471d299",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a47fbd",
+   "id": "0240c477",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56031570",
+   "id": "02bc0a25",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a04eb7",
+   "id": "94c74832",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fdea55a",
+   "id": "bd946ed1",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb90a58d",
+   "id": "32620612",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef026f02",
+   "id": "b13476ce",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b0a6d7",
+   "id": "b24b314e",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e009f4d0",
+   "id": "f847ee0b",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403a9a63",
+   "id": "90cee4c8",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173f2cf5",
+   "id": "086e8303",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3cc013",
+   "id": "87cd420f",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8190cfa",
+   "id": "7a0b6502",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e215fa30",
+   "id": "6405f306",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0819d861",
+   "id": "9e69226a",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c4070f",
+   "id": "87c08b0b",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674a8a75",
+   "id": "16ec5fde",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef31284",
+   "id": "7746791e",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8146c193",
+   "id": "6adce3fb",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a93b2a",
+   "id": "2e35bf2b",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba5d828",
+   "id": "2c912363",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a20b981",
+   "id": "9f44a4d1",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d206682",
+   "id": "4a642713",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3283bd14",
+   "id": "877e060c",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e758c18",
+   "id": "afaeab4f",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.3291228,
+  "date": 1764567831.97996,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
