--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a20c62c",
+   "id": "631f780a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb890376",
+   "id": "51bbb338",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9752942",
+   "id": "f1c06e6e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a2558b",
+   "id": "e2f2c1bc",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d495f960",
+   "id": "4cb32970",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad769850",
+   "id": "4c5affdc",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0abe2c",
+   "id": "2f2784de",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d589fe6",
+   "id": "16b3346d",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac909abc",
+   "id": "d43205f6",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33408cef",
+   "id": "64ef498f",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2db540",
+   "id": "8b0c8c95",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32bb80d",
+   "id": "47a722d4",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9866359e",
+   "id": "5c1a96d9",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e678f327",
+   "id": "d0798fa3",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce19e0b",
+   "id": "8f6bad88",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22df858e",
+   "id": "ae3559ae",
    "metadata": {
     "hide-output": false
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c3e064",
+   "id": "e39a6c2b",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b704d94",
+   "id": "aefddd64",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8efaa582",
+   "id": "5ce3fab4",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1517fd38",
+   "id": "d0b783f9",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffd47509",
+   "id": "7875f539",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cdb08c0",
+   "id": "ae4b664e",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad5007e",
+   "id": "6df07181",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508b0609",
+   "id": "45437c7a",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36897262",
+   "id": "d9920a28",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f889a1d0",
+   "id": "a8a1a0a6",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e72b1b18",
+   "id": "cc54e4c6",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ebc03de",
+   "id": "6ba81275",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ce8f74",
+   "id": "e500d89b",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66280f84",
+   "id": "c598ddc1",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9abeb5",
+   "id": "47254a14",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4925017c",
+   "id": "68596b58",
    "metadata": {
     "hide-output": false
    },
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761f154b",
+   "id": "fa77b5c0",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff177d1",
+   "id": "6777eadd",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff316f4",
+   "id": "5f2245d8",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc75e1f",
+   "id": "bdf2a20e",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74528a53",
+   "id": "e033ef2e",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ee390e",
+   "id": "52dbbdf6",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48798ab",
+   "id": "d707efe8",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3efd51c3",
+   "id": "48e127fb",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5000b2d2",
+   "id": "65c6e7bc",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2206b7aa",
+   "id": "9960a024",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b086a1",
+   "id": "449a2dd6",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f4180a",
+   "id": "0ad56ab2",
    "metadata": {
     "hide-output": false
    },
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69af3e05",
+   "id": "74613ec7",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a233373",
+   "id": "84e59073",
    "metadata": {
     "hide-output": false
    },
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8564244",
+   "id": "4eccc269",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607028b7",
+   "id": "2611f0c6",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723a797b",
+   "id": "5e9558a1",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92104c92",
+   "id": "636cdac5",
    "metadata": {},
    "source": [
     "Here’s a visualization of the quality of our fit."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e806d9",
+   "id": "06676303",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82a22d2",
+   "id": "219b5e13",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53841b4",
+   "id": "62395ab8",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674a01b3",
+   "id": "f4499f90",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3fd8cd",
+   "id": "f7bbc497",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa1afce",
+   "id": "b106c040",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d6b4388",
+   "id": "48d14dce",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95584505",
+   "id": "7c7ae899",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a09f6",
+   "id": "bbbfb2cb",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3704b2cf",
+   "id": "23113fe1",
    "metadata": {
     "hide-output": false
    },
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75468b96",
+   "id": "4eb53dfc",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62754cb",
+   "id": "f2d6dae4",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a090baf",
+   "id": "8a39cdc6",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5af7089b",
+   "id": "251e1c79",
    "metadata": {
     "hide-output": false
    },
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f834baaa",
+   "id": "2f36b9e6",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8f8faf",
+   "id": "b0eb416e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416cc737",
+   "id": "419a2634",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4451d598",
+   "id": "6f152e9e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
@@ -1206,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77af793",
+   "id": "2f01f73e",
    "metadata": {
     "hide-output": false
    },
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e754938",
+   "id": "b6195dc4",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eac891c",
+   "id": "dc9d57e3",
    "metadata": {
     "hide-output": false
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d77f99",
+   "id": "394f0aab",
    "metadata": {},
    "source": [
     "**Strategy 3: ELU Activation**\n",
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e72b5b1",
+   "id": "ca9a8c51",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc50f9c",
+   "id": "cb13aabf",
    "metadata": {},
    "source": [
     "**Strategy 4: SELU Activation**\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc212de",
+   "id": "8130e11b",
    "metadata": {
     "hide-output": false
    },
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e562f632",
+   "id": "06f2bf74",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b4729b2",
+   "id": "0ee1edd8",
    "metadata": {
     "hide-output": false
    },
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94fd78fd",
+   "id": "583f3c08",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1548,7 +1548,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.600878,
+  "date": 1764567832.2378273,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
