--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75b9da7a",
+   "id": "37f6b14f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80763fe",
+   "id": "bac90fd9",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea290e30",
+   "id": "5061f27c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8ddc0e",
+   "id": "0471d365",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e695eed0",
+   "id": "3214c4ad",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87421f05",
+   "id": "879aaab1",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47b9e3ee",
+   "id": "eefc9b3b",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c0736f",
+   "id": "351b2359",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725d6aa8",
+   "id": "0deb2353",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "205b56e6",
+   "id": "adb57f7b",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41e41a5",
+   "id": "adf9bd48",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbb0297",
+   "id": "0e386c6d",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e1fc6d",
+   "id": "07969719",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cbd2014",
+   "id": "d9b14015",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f510319",
+   "id": "9c14f350",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5355a3",
+   "id": "0975eda1",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d211cae",
+   "id": "819fad08",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ca5fa2",
+   "id": "59d564bf",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac6c3d5",
+   "id": "7a8122ee",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e988f118",
+   "id": "cfffe69d",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e6a9f1",
+   "id": "0131c105",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470ece6c",
+   "id": "d71c99fb",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d61c913",
+   "id": "f73b5937",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b8b1861",
+   "id": "bf57f06d",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f29a59",
+   "id": "a12ad8fe",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa7f581",
+   "id": "435f4301",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "882f5e90",
+   "id": "6a78a8bd",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8223fe30",
+   "id": "1cb78cd3",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2458d9b",
+   "id": "1322cd78",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37980517",
+   "id": "5e0fcc03",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fe1fcc",
+   "id": "03e6b1d3",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b49357c",
+   "id": "471b1f2f",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abad8ab9",
+   "id": "153ac338",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97527a9d",
+   "id": "6296cf3d",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57dd37f3",
+   "id": "796a21f8",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "777f2725",
+   "id": "eb784c60",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b435d87",
+   "id": "34820d4b",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa47980",
+   "id": "d7c9cbb7",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6ff551",
+   "id": "32419ade",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8863fc36",
+   "id": "f71a8e0c",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5047419",
+   "id": "37e35c3b",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "944bc352",
+   "id": "cdecdc8a",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2d08a8",
+   "id": "25da01fe",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60825a8a",
+   "id": "18086c49",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a469a0e1",
+   "id": "e2ed1780",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8e3b0b",
+   "id": "8539024f",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1830ef5",
+   "id": "f0246b82",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02763c4e",
+   "id": "4610dd48",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225d148f",
+   "id": "fdb16de4",
    "metadata": {
     "hide-output": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f860299c",
+   "id": "490f127e",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90d968e",
+   "id": "bfc8a18a",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24385d5",
+   "id": "fca5d702",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cdf4f2d",
+   "id": "c49a5af1",
    "metadata": {
     "hide-output": false
    },
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0c17ec4",
+   "id": "ac214c39",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2f0fa9",
+   "id": "67130a83",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691e27ad",
+   "id": "d0c076d9",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1f8ed5",
+   "id": "390ad8dd",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe55217",
+   "id": "a55aa990",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c07834",
+   "id": "3c951672",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73c526a4",
+   "id": "80d8e35f",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dfd74d8",
+   "id": "c21ada16",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc03adfb",
+   "id": "183ca5ec",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2467286",
+   "id": "2a4ad17b",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb25473",
+   "id": "86302470",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83d3efd",
+   "id": "fbf4de95",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75067dab",
+   "id": "bf23c9e6",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efac5a56",
+   "id": "6b20707d",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3a657f4",
+   "id": "4f848218",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b788be35",
+   "id": "70566ae1",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292e9334",
+   "id": "c7199c84",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd7341b",
+   "id": "d1ae897a",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ecad6c",
+   "id": "84fcedd2",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c4e427",
+   "id": "ef28a598",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5542f0bc",
+   "id": "32605bb8",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89bc6a5",
+   "id": "485c23e6",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82fcc453",
+   "id": "ec0c7d72",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b108637e",
+   "id": "8051d82c",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4dab24d",
+   "id": "bd7ea1b9",
    "metadata": {
     "hide-output": false
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f413cb5f",
+   "id": "fedb19e5",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1513,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1764556257.9707332,
+  "date": 1764567832.593823,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
